kubernetes/frontend/demo-canary/canary-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: canary-frontend
  namespace: time-capsule
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend-canary
  template:
    metadata:
      labels:
        app: frontend-canary
        policy: frontend-canary
    spec:
      containers:
      - name: frontend-canary
        image: europe-west4-docker.pkg.dev/time-capsule-412314/time-capsule/frontend:2
        imagePullPolicy: Always
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
