kubernetes/frontend/demo-canary/canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: canary-frontend
  namespace: time-capsule
spec:
  selector:
    app: frontend-canary
  ports:
   - port: 80
     targetPort: 80
